manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  # namespace: mynamespace
spec:
  type: ClusterIP
  selector:
    app: myapp-101
  ports:
    - port: 80
      targetPort: 80
